# project_RAG_and_Graph

./: .gitignore  README.md  env_sample.json  grade.md  graph_query.ipynb  main_rag.ipynb  pyproject.toml  rag_query.ipynb  requirements.txt
data/: chunks.json  graph_data.json  knowledge_graph.pkl  mock_file_data.txt
file/: shoe-mold-technical-document.txt
file/gragh_tool/: pormpt_search_entity.txt  shoe-mold-entity.txt  shoe-mold-faq.md  shoe-mold-relations.txt
graph_pipeline/: README.md  create_knowledge_graph.py  embeding_entity_relation_to_pincone.py  graph_data_to_neo4j.py  test.py  visualize_knowledge_graph.py
rag_pipeline/: README.md  chunks_embeding_2_vector_db.py  text_2_chunks.py
rag_to_vector_db_pinecone/: README.md  rag_to_vector_db_pinecone.py
rag_to_vector_db_pinecone/rag_pipeline/: chunks_embeding_2_vector_db.py  file_2_text.py  text_2_chunks.py
