[tool.poetry]
name = "project_RAG_and_Graph"
version = "0.1.0"
description = ""
authors = ["simongood <simongood2986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
langchain = "^0.3.19"
pinecone = "^6.0.1"
langchain-openai = "^0.3.7"
networks = "^0.3.7"
networkx = "^3.4.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
